Breadcrumb alignment fixes in mobiles for Category.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@597 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common.css
@@ -250,6 +250,7 @@
     font-size: 0.8125em;
     line-height: 1;
     letter-spacing: 2px;
+	text-align:left;
 }
 
 .hds-global-header .breadcrumb-container .breadcrumb a {
